@@ -1,3 +1,5 @@
+- Fix crash in getRevisions.
+
 ---------------------------------------------
 1.7.4 (2013-09-13)
 
